@@ -64,6 +64,23 @@
     <content_attribute id="money-gambling">none</content_attribute>
   </content_rating>
   <releases>
+    <release version="40.alpha" date="2021-01-10" type="development">
+      <description>
+        <p>Overview of changes in lightsoff 40.alpha</p>
+        <ul>
+          <li>Updated translations</li>
+          <li>Code cleanup and modernization (Arnaud Bonatti)</li>
+        </ul>
+      </description>
+    </release>
+    <release version="3.38.0" date="2020-09-11" type="stable">
+      <description>
+        <p>Overview of changes in lightsoff 3.38.0</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
     <release version="3.37.90" date="2020-08-07" type="development">
       <description>
         <p>Overview of changes in lightsoff 3.37.90</p>
