@@ -1,3 +1,9 @@
+Lights Off 40.alpha
+==================
+
+* Updated translations
+* Code cleanup and modernization (Arnaud Bonatti)
+
 Lights Off 3.38.0
 ==================
 
